# bank-statement-fidelity-editor

./: .dockerignore  .editorconfig  .env  .env.example  .gitattributes  .gitignore  AGENTS.md  AGENTS_Overview.txt  AgentAutonomySetup.sh  AgentDevelopmentGuide.md  AgentManagement.md  AppIcon.icns  CHANGELOG.md  CONTRIBUTING.md  Cargo.old.toml  Cargo.toml  Dockerfile  FINAL_SUPER_PROMPT.md  QUICKSTART.md  README.md  agents_documentation.txt  brace_trace.txt  build_mac_app.sh  clean_ui.py  clippy.json  clippy_output.json  clippy_report.txt  clippy_report_utf8.txt  coverage.txt  coverage_baseline.txt  coverage_missing.txt  coverage_missing_new.txt  exported_history.json  extract_buttons.py  extracted_dispatch.rs  extracted_enum.rs  extracted_thread.rs  find_keys.py  find_keys2.py  find_unused.py  (+82 more)
.gemini/: system.md
.github/workflows/: build-executables.yml  build-mac.yml  ci.yml  qodana_code_quality.yml  release.yml  rust-ci.yml
.junie/: guidelines.md
.traycer/cli-agents/: gemi.bat  gemin.bat
assets/: generic_bank_statement.typ
bank_templates/: anz_plus_au.yaml  bofa.yaml  capital_one.yaml  chase.yaml  citi.yaml  ing_orange_au.refined.yaml  ing_orange_au.yaml  macquarie_au.refined.yaml  macquarie_au.yaml  wells_fargo.yaml  westpac_business_one_au.yaml  westpac_choice_basic_au.refined.yaml  westpac_choice_basic_au.yaml
dmg_staging/DualCorePdfPipeline.app/Contents/: Info.plist
docs/: ALL_DOCUMENTATION.txt  BETA_TESTING.md  TECH_STACK.md  TRAINING_HANDOFF.md  stress_test_evaluation.md
logs/: app.log.2026-05-26
logs_test/: app.log.2026-05-28  app.log.2026-05-29  app.log.2026-05-31  app.log.2026-06-01  app.log.2026-06-02  app.log.2026-06-05  app.log.2026-06-16  app.log.2026-06-17  app.log.2026-06-21  app.log.2026-07-01  app.log.2026-07-02  app.log.2026-07-06  app.log.2026-07-08  app.log.2026-07-09  app.log.2026-07-11  app.log.2026-07-13  app.log.2026-07-14  app.log.2026-07-15  app.log.2026-07-16  app.log.2026-07-17  app.log.2026-07-18  app.log.2026-07-19  app.log.2026-07-20  app.log.2026-07-21  app.log.2026-07-23
python/: append_audit_report.py  font_replicator.py  pymupdf_pro_integration.py  requirements-test.txt
python/tests/: test_font_replicator.py  test_pymupdf_integration.py
scratch/: check_op.py  create_processor.py  fix_tests_unwraps.py  fix_unwraps.py  import_docs.py  mindee_test.py  new_processor_id.txt  test_gemini.rs  train.py  update_dataset.py  update_schema.py
scripts/: FIDELITY_NOTES.md  add_deps.py  add_methods.py  align_diag.py  audit_docstrings.py  build_hybrid.py  build_mac_app.sh  clean_runtime.py  debug_extract.py  debug_extracted_ttf.py  debug_full_cascade.py  debug_picker.py  debug_rawdict.py  doctor.ps1  doctor.sh  e2e_pipeline.py  fidelity_probe.py  fix_apostrophes.py  fix_page_count.py  inspect_au_columns.py  inspect_pdfs.py  learn_au_templates.py  refactor_tx.py  smoke_font_cascade.py  smoke_kern.py  split_for_training.py  split_merge_fidelity_check.py  strip_stubs.py  test_composite_synth.py  test_kern_synthesis.py  test_stage_f.py  test_stage_f_e2e.py  test_subset_extension.py  triple_pass.sh
src/: error.rs  lib.rs  main.rs  test_egui.rs
src/ai/: applitools_bridge.js  backend.rs  docai_cache.rs  document_ai.rs  gemini_client.rs  lipi_ai.rs  llamaparse.rs  mindee.rs  mod.rs  openai_client.rs  pdfrest.rs  pyo3_bridge.rs  repair.rs  vision.rs
src/app/: api_verification.rs  audit.rs  cli.rs  config.rs  env_spec.rs  error.rs  fontcache.rs  gui.rs  mod.rs  modals.rs  notify.rs  panels.rs  paths.rs  preflight.rs  runtime.rs  server.rs  telemetry.rs  theme.rs  watchdog.rs
src/engine/: ai_confirm.rs  balance.rs  categorization.rs  consensus.rs  date_adjust.rs  font_analysis.rs  font_replication.rs  font_shaping.rs  history.rs  interactive_fallback.rs  layout.rs  mod.rs  model.rs  number_format.rs  offline_parser.rs  openrouter_parser.rs  pdf_split_merge.rs  pro_edit.rs  resource_check.rs  segments.rs  statement.rs  text_editor.rs  transfer.rs  transfer_test_harness.rs  typst_engine.rs  verification.rs  workflow.rs
src/extractors/: geometry.rs  merger.rs  mod.rs  ocrs_engine.rs  pymupdf_heuristic.rs  templates.rs  tesseract.rs
src/pdf/: engine.rs  mod.rs  mupdf_engine.rs  native_engine.rs  pymupdf_engine.rs  selector.rs
src/security/: mod.rs  software_root.rs
tests/: README.md  ai_backend_tests.rs  ai_document_ai_tests.rs  ai_gemini_client_tests.rs  ai_live.rs  ai_loop_tests.rs  api_chaos_tests.rs  api_mock_tests.rs  au_statements_deep_dive.rs  au_transfer_stress.rs  cascade_fallback.rs  chaos_fallback.rs  chaos_tests.rs  check_sysinfo.rs  computer_use.rs  concurrency_chaos.rs  consensus_matrix_tests.rs  dependency_e2e.rs  e2e_engine_tests.rs  e2e_rust_uiautomation.rs  e2e_scoring.rs  e2e_segmented_pipeline.rs  engine_font_analysis_tests.rs  engine_font_replication_tests.rs  engine_font_shaping_tests.rs  engine_interactive_fallback_tests.rs  engine_resource_check_tests.rs  engine_statement_tests.rs  engine_typst_tests.rs  engine_verification_tests.rs  engine_workflow_tests.rs  extractors_geometry_tests.rs  fallback_integration_tests.rs  font_cascade.rs  generate_key.rs  generate_stress_pdfs.py  gui_app_state_tests.rs  gui_button_core_tests.rs  gui_core_missing_tests.rs  gui_coverage_tests.rs  (+25 more)
tests/e2e/: requirements.txt  test_pywinauto.py  test_vision_pyautogui.py
tests/fixtures/: mod.rs  test_service_account.json
tests/node/: applitools_bridge.test.js
tests/python/: test_refactor_tx.py  test_split_merge.py
tests/smoke/: run_smoke.sh
tests/stress_pdfs/: test1_ground_truth.json  test2_ground_truth.json  test3_ground_truth.json  test4_ground_truth.json
tests/stress_results/: stress_test_evaluation.md  stress_test_raw.json
