[package]
name = "dual-core-pdf-pipeline"
version = "0.5.0"
edition = "2021"
description = "Bank Statement Fidelity Editor v0.5.0 — Smart Balance Engine + high-fidelity targeted text editing"
authors = ["Grok xAI"]
license = "MIT OR Apache-2.0"

[features]
default = []
dev = []

[dependencies]
pyo3 = { version = "0.24.1", features = ["auto-initialize"] }
pdfium-render = "0.8"

clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart", "blocking", "stream"] }
urlencoding = "2.1"
reqwest-middleware = { version = "0.3", features = ["json", "multipart"] }
reqwest-retry = "0.6"
chacha20poly1305 = "0.10"
lopdf = "0.34"
pdf-writer = "0.12"
dotenvy = "0.15"
egui = "0.28"                    # Simple, fast, pure-Rust GUI (best for 2026 alpha)
eframe = "0.28"                  # egui backend for native window
thiserror = "1.0"                  # Excellent error handling (used in balance_engine + text_editor)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
tokio-util = "0.7"
futures-util = "0.3"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }
image = "0.25"
image_hasher = "3"
tracing-appender = "0.2.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
opentelemetry = "0.21.0"
opentelemetry_sdk = { version = "0.21.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.14.0"
tracing-opentelemetry = "0.22.0"
jsonwebtoken = "9"
serde_yaml = "0.9.0"
regex = "1.12.3"
sha2 = "0.10"
rfd = "0.14"
tempfile = "3.27.0"
egui_extras = { version = "0.28", features = ["svg", "image", "all_loaders"] }
egui_plot = "0.28"
confy = "0.6"
rust_xlsxwriter = "0.64"
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
rust_decimal_macros = "1.36"
dark-light = "2.0.0"

# ── Pure Rust Stack (Phase 0) ──
# PDF Core
oxidize-pdf = "0.1"
# pdf-writer already present above

# Typography & Shaping
skrifa = "0.26"
write-fonts = "0.35"
rustybuzz = "0.20"
ttf-parser = "0.25"

# Data & Math
polars = { version = "0.46", features = ["lazy", "strings", "regex", "dtype-decimal", "temporal", "cum_agg"] }
winnow = "0.7"

# Vision & OCR (future phases)
imageproc = "0.25"
zeroize = "1.9.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3.27.0"
rand_core = "0.6"
rand = "0.8"
proptest = "1.0"
assert_cmd = "2.0"
predicates = "3.1"

# -----------------------------------------------------------------------------
# Profile tweaks
#
# The dependency graph (egui + ravif + opentelemetry + reqwest + polars + image)
# produces a debug PDB > 4 GB on Windows MSVC, which overflows LNK1140.
# Switching dev profile to packed debug info keeps stack traces but avoids
# the per-DLL PDB explosion.
# -----------------------------------------------------------------------------
[profile.dev]
debug = false
split-debuginfo = "off"
incremental = true

[profile.test]
debug = false
split-debuginfo = "packed"
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
